--- a/source/ZedGraph.csproj.nuspec
+++ b/source/ZedGraph.csproj.nuspec
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>ZedGraph</id>
-    <version>5.1.7</version>
+    <id>N8I.ZedGraph</id>
+    <version>$version$</version>
     <title />
     <authors>ZedGraph Project</authors>
     <owners />
