--- a/unittest/packages.config
+++ b/unittest/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Albedo" version="1.0.1" targetFramework="net45" />
-  <package id="AutoFixture" version="3.34.2" targetFramework="net45" />
-  <package id="AutoFixture.AutoRhinoMocks" version="3.34.2" targetFramework="net45" />
-  <package id="AutoFixture.Idioms" version="3.34.2" targetFramework="net45" />
-  <package id="NUnit" version="2.6.4" targetFramework="net35-client" />
+  <package id="Albedo" version="2.0.0" targetFramework="net45" />
+  <package id="AutoFixture" version="4.4.0" targetFramework="net452" />
+  <package id="AutoFixture.AutoRhinoMocks" version="4.4.0" targetFramework="net452" />
+  <package id="AutoFixture.Idioms" version="4.4.0" targetFramework="net452" />
+  <package id="Fare" version="2.1.1" targetFramework="net452" />
+  <package id="NUnit" version="3.10.1" targetFramework="net45" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net35-client" />
 </packages>
