--- a/source/N8IZedGraph.nuspec
+++ b/source/N8IZedGraph.nuspec
@@ -2,12 +2,12 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>N8I.ZedGraph</id>
-    <version>6.5.19094.0404</version>
+    <version>6.6.19188.0707</version>
     <title />
     <authors>ZedGraph Project, Number Eight Innovation</authors>
     <owners>ZedGraph Project</owners>
     <licenseUrl>http://www.gnu.org/licenses/lgpl-2.1.txt</licenseUrl>
-    <projectUrl>https://github.com/zedgraph/</projectUrl>
+    <projectUrl>https://github.com/PaulMartinsen/ZedGraph</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>ZedGraph is a class library, user control, and web control for .net, written in C#, for drawing 2D Line, Bar, and Pie Charts. It features full, detailed customization capabilities, but most options have defaults for ease of use.</description>
     <copyright>Copyright © 2003-2007 John Champion</copyright>
