--- a/source/N8IZedGraph.XmlPersistence.nuspec
+++ b/source/N8IZedGraph.XmlPersistence.nuspec
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>N8I.ZedGraph</id>
-    <version>6.7.19364.1230</version>
+    <id>N8I.ZedGraph.XmlPersistence</id>
+    <version>1.0.19364.0</version>
     <title />
-    <authors>ZedGraph Project, Number Eight Innovation</authors>
-    <owners>ZedGraph Project</owners>
+    <authors>Number Eight Innovation</authors>
+    <owners>Number Eight Innovation</owners>
     <licenseUrl>http://www.gnu.org/licenses/lgpl-2.1.txt</licenseUrl>
     <projectUrl>https://github.com/PaulMartinsen/ZedGraph</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>ZedGraph is a class library, user control, and web control for .net, written in C#, for drawing 2D Line, Bar, and Pie Charts. It features full, detailed customization capabilities, but most options have defaults for ease of use.</description>
-    <copyright>Copyright © 2003-2007 John Champion</copyright>
+    <description>Implements support to persist ZedGraph properties to and from Xml.</description>
+    <copyright>Copyright © 2019 Number Eight Innovation</copyright>
     <language />
     <frameworkAssemblies>
       <frameworkAssembly assemblyName="System.Windows.Forms" targetFramework="net35" />
@@ -19,10 +19,11 @@
       <frameworkAssembly assemblyName="System.Windows.Forms" targetFramework="net46" />
       <frameworkAssembly assemblyName="System.Windows.Forms" targetFramework="net47" />
     </frameworkAssemblies>
+    <dependencies>
+      <dependency id="N8I.ZedGraph" version="6.7.19364.1230" />
+    </dependencies>
   </metadata>
   <files>
-    <file src="ZedGraph\bin\Release\**\ZedGraph*.dll" target="lib" />
-    <file src="ZedGraph\bin\Release\**\ZedGraph.XML" target="lib" />
-    <file src="..\CHANGELOG.md"/>
+    <file src="ZedGraph.XmlPersistence\bin\Release\**\ZedGraph.XmlPersistence.dll" target="lib" />
   </files>
 </package>
